Bug #1549 - Private Portfolios > Request membership > submit button is too close to form

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1587,6 +1587,10 @@ body{
     margin-top: 50px;
     font-weight: 800;
 }
+/**portfolio request membership**/
+input#group-request-send {
+	margin-top: 10px;
+}
 /**group profiles**/
 #group-action-wrapper{
     .link-btn{
